--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -46,10 +46,6 @@
       =___________________:       <span></span></p>
 
 
-      <p id="latitude"> +_current latitude:         <span></span><br>
-      -_initial latitude:         <span></span><br>
-      =_________________:         <span></span></p>
-
       <p id="list"></p>
     </div>
 
@@ -60,6 +56,7 @@
       var watchID;
       function getLocation() {
               var coords = [ 'latitude', 'longitude', 'altitude' ];
+              var initTime;
               if (navigator.geolocation) {
                       navigator.geolocation.getCurrentPosition(showPosition, errorCallback);
 
@@ -102,17 +99,9 @@
                                       second = paddingZero(second);
                                       spans[23].textContent =hour + ':' + minute + ':' + second;
 
-//                                      latitude = document.querySelectorAll('#latitude span');
-//                                      latitude[0].textContent = '\xa0' + position.coords.latitude.toFixed(7);
-//                                      len = latitude[0].textContent.length;
-//                                      lendiff = (latitude[0].textContent - latitude[1].textContent).toFixed(7).toString().length;
-//                                      latitude[2].textContent
-//                                        = ('\xa0\xa0\xa0' + (spans[0].textContent - spans[1].textContent).toFixed(7)).substring((-8+lendiff));
-//
 
                                       var list = document.getElementById('list');
                                       list.textContent = '';
-                                      //var p = document.createElement('p');
                                       for(var i = 0, arraylen = coords.length; i < arraylen; i++) {
                                         var coord = coords[i];
                                         var p = document.createElement('p');
@@ -132,6 +121,29 @@
                                         list.appendChild(p);
 
                                       }
+
+                                      var p = document.createElement('p');
+                                      now = new Date(position.timestamp);
+                                      var currenttext = now.toLocaleTimeString();
+                                      makeText('+_current local time: ', currenttext, p);
+
+                                      //var initialtext = initTime.toLocalTimeString();
+                                      //makeText('-_initial local time: ', initialtext, p);
+
+                                      list.appendChild(p);
+
+
+                                      //fullSeconds = Math.floor(now/1000.0) - Math.floor(initTime/1000.0);
+                                      var paddingZero = function(n) {
+                                              return (n < 10) ? '\xa0' + n : n;
+                                            };
+                                      hour = Math.floor(fullSeconds / 3600);
+                                      minute = Math.floor(fullSeconds % 3600 / 60);
+                                      second = Math.floor(fullSeconds % 60);
+                                      hour= paddingZero(hour);
+                                      minute= paddingZero(minute);
+                                      second = paddingZero(second);
+                                      //spans[23].textContent =hour + ':' + minute + ':' + second;
 
 
                                     },null);
