--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -72,9 +72,6 @@
                                         makeText(initialtype, initialvalue, p);
 
                                         fullSeconds = Math.floor(now/1000.0) - Math.floor(init/1000.0);
-                                        var paddingZero = function(n) {
-                                                return (n < 10) ? '\xa0' + n : n;
-                                              };
                                         hour = Math.floor(fullSeconds / 3600);
                                         minute = Math.floor(fullSeconds % 3600 / 60);
                                         second = Math.floor(fullSeconds % 60);
@@ -85,25 +82,17 @@
                                         var difftype = '=_(diff)__' + timestamp.replace(/./g, '_');
                                         makeText(difftype, diffvalue, p);
 
-
-
                                         list.appendChild(p);
 
                                       }
-                                      var paddingZero = function(n) {
-                                              return (n < 10) ? '\xa0' + n : n;
-                                            };
-                                      hour = Math.floor(fullSeconds / 3600);
-                                      minute = Math.floor(fullSeconds % 3600 / 60);
-                                      second = Math.floor(fullSeconds % 60);
-                                      hour= paddingZero(hour);
-                                      minute= paddingZero(minute);
-                                      second = paddingZero(second);
 
                                     },null);
                     } else {
                             document.querySelector('p').textContent = "Geolocation is not supported by this browser.";
                           }
+              function paddingZero(n) {
+                      return (n < 10) ? '\xa0' + n : n;
+                    };
               var initials = {};
               function makeText(type, value, p) {
                   var dotpos = value.toString().indexOf('.');
